--- a/app/src/main/res/layout/collect_bids_fragment.xml
+++ b/app/src/main/res/layout/collect_bids_fragment.xml
@@ -11,47 +11,136 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:textStyle="bold"
-        android:textSize="48sp"
         android:fontFamily="@font/advancedpixel7"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/insert_your_bid"
+        android:textSize="@dimen/title_text_size"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/imageContainer"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/insert_your_bid" />
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <View
         android:id="@+id/imageContainer"
         android:layout_width="190dp"
-        android:layout_height="190dp"
-        android:layout_marginTop="50dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/regular_margin_value"
         android:background="@drawable/square"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/idInsert"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
     <ImageView
+        android:id="@+id/imgPlaceholder"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        app:layout_constraintStart_toStartOf="@id/imageContainer"
-        app:layout_constraintEnd_toEndOf="@id/imageContainer"
-        app:layout_constraintTop_toTopOf="@id/imageContainer"
+        android:layout_marginTop="@dimen/small_margin_value"
         app:layout_constraintBottom_toBottomOf="@id/imageContainer"
+        app:layout_constraintEnd_toEndOf="@id/imageContainer"
+        app:layout_constraintStart_toStartOf="@id/imageContainer"
+        app:layout_constraintTop_toTopOf="@id/imageContainer"
+        app:layout_constraintVertical_bias="0.0"
         tools:src="@drawable/punk9463"/>
 
-    <EditText
-        android:id="@+id/bid"
+    <TextView
+        android:id="@+id/id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/bid_value"
-        android:layout_marginTop="25dp"
-        android:inputType="numberDecimal"
-        android:textAlignment="center"
-        android:textSize="32sp"
+        android:layout_marginTop="@dimen/small_margin_value"
         android:fontFamily="@font/advancedpixel7"
-        app:layout_constraintVertical_bias="0.2"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/bidder_data_placeholder"
+        android:textSize="@dimen/small_text_size"
+        app:layout_constraintEnd_toEndOf="@id/imageContainer"
+        app:layout_constraintStart_toStartOf="@id/imageContainer"
+        app:layout_constraintTop_toBottomOf="@id/imgPlaceholder"/>
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/small_margin_value"
+        android:fontFamily="@font/advancedpixel7"
+        android:text="@string/no_name"
+        android:textSize="@dimen/small_text_size"
+        app:layout_constraintEnd_toEndOf="@id/imageContainer"
+        app:layout_constraintStart_toStartOf="@id/imageContainer"
+        app:layout_constraintTop_toBottomOf="@id/id"/>
+
+    <TextView
+        android:id="@+id/value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/small_margin_value"
+        android:layout_marginBottom="@dimen/small_margin_value"
+        android:fontFamily="@font/advancedpixel7"
+        android:text="@string/bidder_data_placeholder"
+        android:textSize="@dimen/small_text_size"
+        app:layout_constraintBottom_toBottomOf="@id/imageContainer"
+        app:layout_constraintEnd_toEndOf="@id/imageContainer"
+        app:layout_constraintStart_toStartOf="@id/imageContainer"
+        app:layout_constraintTop_toBottomOf="@id/name"/>
+
+    <EditText
+        android:id="@+id/idInsert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/regular_margin_value"
+        android:fontFamily="@font/advancedpixel7"
+        android:hint="@string/bidder_id"
+        android:inputType="numberDecimal"
+        android:minWidth="@dimen/min_insert_width"
+        android:textAlignment="center"
+        android:textSize="@dimen/regular_text_size"
+        app:layout_constraintBottom_toTopOf="@id/nameInsert"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageContainer" />
+
+    <EditText
+        android:id="@+id/nameInsert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/regular_margin_value"
+        android:fontFamily="@font/advancedpixel7"
+        android:hint="@string/bidder_name"
+        android:inputType="textPersonName"
+        android:minWidth="@dimen/min_insert_width"
+        android:textAlignment="center"
+        android:textSize="@dimen/regular_text_size"
+        app:layout_constraintBottom_toTopOf="@id/valueInsert"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/idInsert" />
+
+    <EditText
+        android:id="@+id/valueInsert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/regular_margin_value"
+        android:fontFamily="@font/advancedpixel7"
+        android:hint="@string/bidder_value"
+        android:inputType="numberDecimal"
+        android:minWidth="@dimen/min_insert_width"
+        android:textAlignment="center"
+        android:textSize="@dimen/regular_text_size"
+        app:layout_constraintBottom_toTopOf="@id/addBid"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nameInsert" />
+
+    <Button
+        android:id="@+id/addBid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/regular_margin_value"
+        android:fontFamily="@font/advancedpixel7"
+        android:text="@string/insert"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/valueInsert" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
