--- a/app/src/main/res/layout/start_auction_fragment.xml
+++ b/app/src/main/res/layout/start_auction_fragment.xml
@@ -11,41 +11,44 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/advancedpixel7"
+        android:text="@string/auction_type"
         android:textAlignment="center"
         android:textSize="48sp"
-        android:fontFamily="@font/advancedpixel7"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/reservePrice"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/auction_type" />
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <EditText
         android:id="@+id/reservePrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="@dimen/regular_margin_value"
+        android:fontFamily="@font/advancedpixel7"
         android:hint="@string/reserve_price"
         android:inputType="numberDecimal"
+        android:minWidth="@dimen/min_insert_width"
         android:textAlignment="center"
         android:textSize="32sp"
-        android:fontFamily="@font/advancedpixel7"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/startAuction"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
     <Button
         android:id="@+id/startAuction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="32sp"
-        android:text="@string/start_auction"
+        android:layout_marginTop="@dimen/regular_margin_value"
         android:fontFamily="@font/advancedpixel7"
+        android:text="@string/start_auction"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintTop_toBottomOf="@id/reservePrice" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
