App is now able to show the auction result

--- a/app/src/main/res/layout/start_auction_fragment.xml
+++ b/app/src/main/res/layout/start_auction_fragment.xml
@@ -43,7 +43,7 @@
         app:layout_constraintStart_toStartOf="@id/imageContainer"
         app:layout_constraintTop_toTopOf="@id/imageContainer"
         app:layout_constraintVertical_bias="0.0"
-        tools:src="@drawable/punk9463"/>
+        tools:src="@drawable/product1040"/>
 
     <TextView
         android:id="@+id/product"
