--- a/app/src/main/res/layout/collect_bids_fragment.xml
+++ b/app/src/main/res/layout/collect_bids_fragment.xml
@@ -7,140 +7,156 @@
     android:layout_height="match_parent"
     tools:context=".presentation.startauction.StartAuctionFragment">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/advancedpixel7"
-        android:text="@string/insert_your_bid"
-        android:textSize="@dimen/title_text_size"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/imageContainer"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintBottom_toBottomOf="parent">
 
-    <View
-        android:id="@+id/imageContainer"
-        android:layout_width="190dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/regular_margin_value"
-        android:background="@drawable/square"
-        app:layout_constraintBottom_toTopOf="@id/idInsert"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="@dimen/small_margin_value"
-        app:layout_constraintBottom_toBottomOf="@id/imageContainer"
-        app:layout_constraintEnd_toEndOf="@id/imageContainer"
-        app:layout_constraintStart_toStartOf="@id/imageContainer"
-        app:layout_constraintTop_toTopOf="@id/imageContainer"
-        app:layout_constraintVertical_bias="0.0"
-        tools:src="@drawable/punk9463"/>
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/advancedpixel7"
+                android:text="@string/insert_your_bid"
+                android:textSize="@dimen/title_text_size"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/imageContainer"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed" />
 
-    <TextView
-        android:id="@+id/id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/small_margin_value"
-        android:fontFamily="@font/advancedpixel7"
-        android:text="@string/empty_info"
-        android:textSize="@dimen/small_text_size"
-        app:layout_constraintEnd_toEndOf="@id/imageContainer"
-        app:layout_constraintStart_toStartOf="@id/imageContainer"
-        app:layout_constraintTop_toBottomOf="@id/image"/>
+            <View
+                android:id="@+id/imageContainer"
+                android:layout_width="190dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="@dimen/regular_margin_value"
+                android:background="@drawable/square"
+                app:layout_constraintBottom_toTopOf="@id/idInsert"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title" />
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/small_margin_value"
-        android:fontFamily="@font/advancedpixel7"
-        android:text="@string/no_name"
-        android:textSize="@dimen/small_text_size"
-        app:layout_constraintEnd_toEndOf="@id/imageContainer"
-        app:layout_constraintStart_toStartOf="@id/imageContainer"
-        app:layout_constraintTop_toBottomOf="@id/id"/>
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_marginTop="@dimen/small_margin_value"
+                app:layout_constraintBottom_toBottomOf="@id/imageContainer"
+                app:layout_constraintEnd_toEndOf="@id/imageContainer"
+                app:layout_constraintStart_toStartOf="@id/imageContainer"
+                app:layout_constraintTop_toTopOf="@id/imageContainer"
+                app:layout_constraintVertical_bias="0.0"
+                tools:src="@drawable/punk9463"/>
 
-    <TextView
-        android:id="@+id/value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/small_margin_value"
-        android:layout_marginBottom="@dimen/small_margin_value"
-        android:fontFamily="@font/advancedpixel7"
-        android:text="@string/empty_info"
-        android:textSize="@dimen/small_text_size"
-        app:layout_constraintBottom_toBottomOf="@id/imageContainer"
-        app:layout_constraintEnd_toEndOf="@id/imageContainer"
-        app:layout_constraintStart_toStartOf="@id/imageContainer"
-        app:layout_constraintTop_toBottomOf="@id/name"/>
+            <TextView
+                android:id="@+id/id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/small_margin_value"
+                android:fontFamily="@font/advancedpixel7"
+                android:text="@string/empty_info"
+                android:textSize="@dimen/small_text_size"
+                app:layout_constraintEnd_toEndOf="@id/imageContainer"
+                app:layout_constraintStart_toStartOf="@id/imageContainer"
+                app:layout_constraintTop_toBottomOf="@id/image"/>
 
-    <EditText
-        android:id="@+id/idInsert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/regular_margin_value"
-        android:fontFamily="@font/advancedpixel7"
-        android:hint="@string/bidder_id"
-        android:inputType="numberDecimal"
-        android:minWidth="@dimen/min_insert_width"
-        android:textAlignment="center"
-        android:textSize="@dimen/regular_text_size"
-        app:layout_constraintBottom_toTopOf="@id/nameInsert"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageContainer" />
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/small_margin_value"
+                android:fontFamily="@font/advancedpixel7"
+                android:text="@string/no_name"
+                android:textSize="@dimen/small_text_size"
+                app:layout_constraintEnd_toEndOf="@id/imageContainer"
+                app:layout_constraintStart_toStartOf="@id/imageContainer"
+                app:layout_constraintTop_toBottomOf="@id/id"/>
 
-    <EditText
-        android:id="@+id/nameInsert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/regular_margin_value"
-        android:fontFamily="@font/advancedpixel7"
-        android:hint="@string/bidder_name"
-        android:inputType="textPersonName"
-        android:minWidth="@dimen/min_insert_width"
-        android:textAlignment="center"
-        android:textSize="@dimen/regular_text_size"
-        app:layout_constraintBottom_toTopOf="@id/valueInsert"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/idInsert" />
+            <TextView
+                android:id="@+id/value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/small_margin_value"
+                android:layout_marginBottom="@dimen/small_margin_value"
+                android:fontFamily="@font/advancedpixel7"
+                android:text="@string/empty_info"
+                android:textSize="@dimen/small_text_size"
+                app:layout_constraintBottom_toBottomOf="@id/imageContainer"
+                app:layout_constraintEnd_toEndOf="@id/imageContainer"
+                app:layout_constraintStart_toStartOf="@id/imageContainer"
+                app:layout_constraintTop_toBottomOf="@id/name"/>
 
-    <EditText
-        android:id="@+id/valueInsert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/regular_margin_value"
-        android:fontFamily="@font/advancedpixel7"
-        android:hint="@string/bidder_value"
-        android:inputType="numberDecimal"
-        android:minWidth="@dimen/min_insert_width"
-        android:textAlignment="center"
-        android:textSize="@dimen/regular_text_size"
-        app:layout_constraintBottom_toTopOf="@id/addBid"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nameInsert" />
+            <EditText
+                android:id="@+id/idInsert"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/regular_margin_value"
+                android:fontFamily="@font/advancedpixel7"
+                android:hint="@string/bidder_id"
+                android:inputType="numberDecimal"
+                android:minWidth="@dimen/min_insert_width"
+                android:textAlignment="center"
+                android:textSize="@dimen/regular_text_size"
+                app:layout_constraintBottom_toTopOf="@id/nameInsert"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/imageContainer" />
 
-    <Button
-        android:id="@+id/addBid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/regular_margin_value"
-        android:fontFamily="@font/advancedpixel7"
-        android:text="@string/insert"
-        android:textSize="@dimen/regular_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/valueInsert" />
+            <EditText
+                android:id="@+id/nameInsert"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/regular_margin_value"
+                android:fontFamily="@font/advancedpixel7"
+                android:hint="@string/bidder_name"
+                android:inputType="textPersonName"
+                android:minWidth="@dimen/min_insert_width"
+                android:textAlignment="center"
+                android:textSize="@dimen/regular_text_size"
+                app:layout_constraintBottom_toTopOf="@id/valueInsert"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/idInsert" />
+
+            <EditText
+                android:id="@+id/valueInsert"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/regular_margin_value"
+                android:fontFamily="@font/advancedpixel7"
+                android:hint="@string/bidder_value"
+                android:inputType="numberDecimal"
+                android:minWidth="@dimen/min_insert_width"
+                android:textAlignment="center"
+                android:textSize="@dimen/regular_text_size"
+                app:layout_constraintBottom_toTopOf="@id/addBid"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/nameInsert" />
+
+            <Button
+                android:id="@+id/addBid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/regular_margin_value"
+                android:fontFamily="@font/advancedpixel7"
+                android:text="@string/insert"
+                android:textSize="@dimen/regular_text_size"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/valueInsert" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
