--- a/app/src/main/res/layout/auction_result_fragment.xml
+++ b/app/src/main/res/layout/auction_result_fragment.xml
@@ -24,9 +24,9 @@
 
     <View
         android:id="@+id/imageContainer"
-        android:layout_width="190dp"
+        android:layout_width="@dimen/image_container_width"
         android:layout_height="0dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="@dimen/regular_margin_value"
         android:background="@drawable/square"
         app:layout_constraintBottom_toTopOf="@id/result"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,8 +35,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="@dimen/image_size"
+        android:layout_height="@dimen/image_size"
         android:layout_marginTop="@dimen/regular_margin_value"
         android:layout_marginBottom="@dimen/regular_margin_value"
         app:layout_constraintBottom_toBottomOf="@id/imageContainer"
