--- a/app/src/main/res/layout/collect_bids_fragment.xml
+++ b/app/src/main/res/layout/collect_bids_fragment.xml
@@ -35,7 +35,7 @@
 
             <View
                 android:id="@+id/imageContainer"
-                android:layout_width="190dp"
+                android:layout_width="@dimen/image_container_width"
                 android:layout_height="0dp"
                 android:layout_marginTop="@dimen/regular_margin_value"
                 android:background="@drawable/square"
@@ -46,8 +46,8 @@
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="@dimen/image_size"
+                android:layout_height="@dimen/image_size"
                 android:layout_marginTop="@dimen/small_margin_value"
                 app:layout_constraintBottom_toBottomOf="@id/imageContainer"
                 app:layout_constraintEnd_toEndOf="@id/imageContainer"
